--- a/wireframes.html
+++ b/wireframes.html
@@ -31,7 +31,7 @@
             <input type="text" name="adding-bookmark-entry" class="js-bookmark-entry" placeholder="e.g., bookmark title">
             <label for="bookmark-url-entry">Add url</label>
             <input type="text" name="adding-bookmark-entry" class="js-bookmark-entry" placeholder="e.g., www.something.com">
-            <form action="#">
+            <form select="#">
                 <p>Bookmark Rating</p>
                 <input type="radio" id="5" name="rating" value="5">
                 <label for="rating">5</label><br>
