--- a/bookmark.html
+++ b/bookmark.html
@@ -15,7 +15,9 @@
         <h1>My Bookmarks</h1>
     </header>
 
-    <main></main>
+    <main class ="main"></main>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" crossorigin="anonymous"></script>
-    <script></script>
+    <script src="item.js"></script>
+    <script src="bookmark.js"></script>
+    <script src="api.js"></script>
 </body>
