--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <h1>My Bookmarks</h1>
     </header>
 
+    <button class="add-bookmark">
+        <span>Add Bookmark</span>
+    </button>
+    <select id="filter-ratings">
+        <span>Filter</span>
+        <option value="">--Filter by Rating--</option>
+        <option value="5">5</option>
+        <option value="4">4</option>
+        <option value="3">3</option>
+        <option value="2">2</option>
+        <option value="1">1</option>
+    </select>
+
     <main class ="main"></main>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" crossorigin="anonymous"></script>
     <script src="item.js"></script>
