--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h1>My Bookmarks</h1>
     </header>
 
+    <div class="error-container">Some text</div>
+
     <button class="add-bookmark">
         <span>Add Bookmark</span>
     </button>
