--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </select>
 
     <main class ="main"></main>
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js" crossorigin="anonymous"></script>
-    <script src="item.js"></script>
-    <script src="bookmark.js"></script>
-    <script src="api.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    
 </body>
+</html>
